fix: not showing flatpak apps (#34)

--- a/src/renderer/src/assets/base.css
+++ b/src/renderer/src/assets/base.css
@@ -46,8 +46,8 @@
   --radius-sm: calc(var(--radius) - 4px);
 
   --font-sans:
-    ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-    'Segoe UI Symbol', 'Noto Color Emoji';
+    ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+    'Noto Color Emoji';
   --font-contrail: Contrail One, cursive;
 
   --animate-accordion-down: accordion-down 0.2s ease-out;
